--- a/source/pubspec.yaml
+++ b/source/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cure: ^0.0.5
   intl: ^0.17.0
   shared_preferences: ^2.0.3
+  logger: ^0.9.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
