--- a/source/pubspec.yaml
+++ b/source/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   intl: ^0.17.0
   shared_preferences: ^2.0.3
   logger: ^0.9.4
+  google_sign_in: ^4.5.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
