--- a/source/pubspec.yaml
+++ b/source/pubspec.yaml
@@ -32,11 +32,11 @@ dependencies:
   http_interceptor: ^0.4.1
   formz: ^0.3.2
   rxdart: ^0.26.0
-  # signalr_core: ^1.0.8
   cure: ^0.0.5
   intl: ^0.17.0
   shared_preferences: ^2.0.3
   logger: ^0.9.4
+  google_sign_in: ^4.5.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
